+ improves nav & fix some layout problems

--- a/src/input.css
+++ b/src/input.css
@@ -35,7 +35,7 @@
 
   transition: .4s;
 }
-
+/* Creates smooth scroll behaviour for in page links */
 html {
   scroll-behavior: smooth;
 }
@@ -47,11 +47,12 @@ body {
 }
 
 nav {
-  position: relative;
+  position: relative; /* nav as a parent position container for dropdowns */
   width: 100%;
 
   background-color: var(--darkblue);
   box-shadow: 0px 1px 6px 3px gray;
+  z-index: 1 !important;
 }
 nav img {
   filter: brightness(0) invert(1); /* change img to white */
@@ -66,7 +67,7 @@ nav ul li {
   transition: .6s;
 }
 nav ul li.selected {
-  color: hsl(146, 100%, 65%);
+  color: hsl(146, 100%, 60%); /* slightly lighter green for nav links */
 }
 nav ul li:hover,
 nav ul li.visible {
@@ -79,14 +80,12 @@ nav .dropdown ul li.selected:hover {
   background-color: var(--green);
 }
 
-nav .dropdown ul {
-  position: absolute;
-  z-index: 1;
-
-  visibility: hidden;
-  opacity: 0;
-
-  transition: .6s;
+/* Dropdown menus */
+nav .dropdown {
+  position: relative;
+}
+nav .dropdown * {
+  min-width: max-content;
 }
 nav .dropdown > li {
   border-radius: var(--base-radius) var(--base-radius) 0 0;
@@ -96,7 +95,17 @@ nav .dropdown > li.selected:hover {
   background-color: var(--white);
 }
 
+nav .dropdown ul {
+  display: block;
+  position: absolute;
+
+  visibility: hidden;
+  opacity: 0;
+
+  transition: .6s;
+}
 nav .dropdown ul li {
+  display: block;
   border-radius: 0;
   
   color: var(--lightblue);
@@ -124,6 +133,9 @@ nav .dropdown ul li:last-child {
   border-bottom-right-radius: var(--base-radius);
 }
 
+nav #contatos li {
+  padding-right: calc(var(--base-padding) * 2);
+}
 
 main {
   min-height: 90vh;
@@ -239,7 +251,7 @@ main .funcionarios .cargo {
 footer {
   background-color: var(--black);
 
-  grid-template-columns: 250px repeat(auto-fit, minmax(250px, 1fr));
+  grid-template-columns: 250px repeat(auto-fit, minmax(100px, 1fr));
   transition: .4s;
 }
 footer * {
